# RPG_me

./: .gitignore  CONTRIBUTING.md  README.md  archivo.txt  archivo2.txt  cli.py  curso.ipynb  curso.py  main.ino  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  save_file.json  skillrpg.py
.github/workflows/: release-apk.yml
app/: .gitignore  README.md  pubspec.yaml
app/lib/: api.dart  main.dart  models.dart  repository.dart  settings.dart
app/lib/local/: event.dart  local_engine.dart  local_store.dart  timer_entry.dart
app/lib/screens/: axes_config_screen.dart  heatmap_screen.dart  home_screen.dart  log_screen.dart  logged_screen.dart  settings_dialog.dart  settings_screen.dart  time_screen.dart  timer_screen.dart  timers_screen.dart
app/lib/widgets/: octagon_chart.dart  subcategory_dialogs.dart
app/test/: local_engine_test.dart  models_test.dart  settings_test.dart
backend/: Makefile  README.md  handler.py  samconfig.toml  template.yaml
data/: config.json
rpgme/: __init__.py  chart.py  config.py  engine.py  models.py  store.py
tests/: test_engine.py  test_handler.py
